vlib/v/checker/tests/struct_field_reference_type_err.vv
struct Animal {
mut:
	ageee int
	duck  Duck
}

struct Duck {
	age &int
}

fn main() {
	mut animal := Animal{
		ageee: 20
	}

	animal.duck = Duck{
		age: animal.ageee
	}
	dump(animal.duck.age)
}
